<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar"
        android:background="#22292c"
        android:orientation="horizontal"
        android:paddingLeft="10dip" >

        <ImageView
            android:id="@+id/left_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/desc"
            android:src="@drawable/back_btn" />

        <EditText
            android:id="@+id/search_content"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_addr"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/search_location_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/search_dialog_cancle_btn"
            android:text="@string/search" />
    </LinearLayout>

    <ListView
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:divider="@color/application_gray"
        android:dividerHeight="0.5dip" />

</LinearLayout>