<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include 
        layout="@layout/title_layout"
        android:id="@+id/title_layout"/>
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="none">
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:layout_marginBottom="10dip"
	        android:layout_marginTop="5dip"
	        android:orientation="vertical">
	        <EditText 
	            android:id="@+id/old_pwd"
	            android:layout_width="fill_parent"
	            android:layout_height="45dip"
	            android:background="@drawable/cirle_edit_bg"
	            android:textColor="@color/application_black"
	            android:textColorHint="@color/application_gray_black"
	            android:singleLine="true"
	            android:hint="@string/old_pwd"
	            android:padding="10dip"
	            android:layout_marginBottom="15dip"
	            android:inputType="textPassword"
	            android:textSize="@dimen/sixteen"/>
	          <EditText 
	            android:id="@+id/new_pwd"
	            android:layout_width="fill_parent"
	            android:layout_height="45dip"
	            android:padding="10dip"
	            android:layout_marginBottom="15dip"
	            android:background="@drawable/cirle_edit_bg"
	            android:textColor="@color/application_black"
	            android:textColorHint="@color/application_gray_black"
	            android:singleLine="true"
	            android:hint="@string/new_pwd"
	            android:inputType="textPassword"
	            android:textSize="@dimen/sixteen"/>
	          <EditText 
	            android:id="@+id/confirm_pwd"
	            android:layout_width="fill_parent"
	            android:layout_height="45dip"
	            android:padding="10dip"
	            android:layout_marginBottom="15dip"
	            android:background="@drawable/cirle_edit_bg"
	            android:textColor="@color/application_black"
	            android:textColorHint="@color/application_gray_black"
	            android:singleLine="true"
	            android:hint="@string/confirm_new_pwd"
	            android:inputType="textPassword"
	            android:textSize="@dimen/sixteen"/>
	          <Button 
	              android:id="@+id/ok"
	              android:layout_width="fill_parent"
	              android:layout_height="40dip"
	              android:background="@drawable/login_btn"
	              android:layout_gravity="center_horizontal"
	              android:text="@string/ok"
	              android:layout_marginTop="70dip"
	              android:layout_marginBottom="20dip"
	              android:textColor="@color/white"
	              android:textSize="@dimen/sixteen"/>
	    </LinearLayout>
	</ScrollView>
</LinearLayout>
