<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/modify_password_layout"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/settting_new_item_height"
                android:layout_marginTop="20dp"
                android:background="@color/white" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"

                    android:text="@string/setting_modify_password"
                    android:textColor="@color/application_black"
                    android:textSize="@dimen/setting_text_size" />
            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/splite"
                android:contentDescription="@string/desc" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/new_message_notify_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height" >


                    <TextView
                        android:id="@+id/scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@id/qr_code_icon"
                        android:text="@string/setting_new_message_notify"
                        android:textColor="@color/application_black"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/privacy_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height" >



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/setting_privacy"
                        android:textColor="@color/order_title_color"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/block_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height"
                    android:background="@drawable/setting_item_sharp_selector" >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/setting_blocked_list"
                        android:textColor="@color/application_black"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/notify_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height"
                    android:background="@drawable/setting_item_sharp_selector"
                    android:visibility="gone" >



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/notification"
                        android:textColor="@color/order_title_color"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/upgrade_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height" >



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/setting_check_versioin"
                        android:textColor="@color/order_title_color"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/feedback_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height" >



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/setting_feedback"
                        android:textColor="@color/application_black"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/help_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/setting_help"
                        android:textColor="@color/application_black"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/backgroud_receive_message_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height" >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/setting_allow_background_receive_message"
                        android:textColor="@color/application_black"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />

                <RelativeLayout
                    android:id="@+id/about_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/settting_new_item_height" >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"

                        android:text="@string/setting_about_us"
                        android:textColor="@color/application_black"
                        android:textSize="@dimen/setting_text_size" />


                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/splite"
                    android:contentDescription="@string/desc" />
            </LinearLayout>

            <Button
                android:id="@+id/logout"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dip"
                android:layout_marginRight="50dip"
                android:layout_marginTop="15dp"
                android:background="@drawable/red_btn"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>