<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title_layout"
        layout="@layout/title_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:fadingEdge="none"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tgll_no_watch_loop"
                    android:text="@string/set_friends_loop_title"
                    android:textColor="@color/application_black"
                    android:textSize="@dimen/eight" />

                <ToggleButton
                    android:id="@+id/tgll_no_watch_loop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/selector_butn_toggle"
                    android:checked="true"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_friends_loop_content"
                android:textColor="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/splite"
                android:contentDescription="@string/desc" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tglloop"
                    android:text="@string/set_friends_loop_title_two"
                    android:textColor="@color/application_black"
                    android:textSize="@dimen/eight" />

                <ToggleButton
                    android:id="@+id/tglloop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/selector_butn_toggle"
                    android:checked="true"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/set_friends_loop_content_two"
                android:textColor="@color/application_deep_gray_black"
                android:textSize="@dimen/sixteen" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/splite"
                android:contentDescription="@string/desc" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>